--- a/1.html
+++ b/1.html
@@ -2,12 +2,111 @@
 <html>
 
 <head>
-    <title>Your Page Title</title>
+    <title>List of Course-wise Subjects</title>
 </head>
 
 <body>
-    <h1>My First Heading</h1>
-    <p>My First paragraph</p>
+    <h1 align="center">List Of Course-wise Subjects</h1>
+    <table border="2" width="100%">
+        <tr>
+            <th rowspan="2">Sr no.</th>
+            <th rowspan="2">Course</th>
+            <th rowspan="2">Subject</th>
+            <th colspan="2">Marks</th>
+            <th colspan="2">Category</th>
+            <th rowspan="2">Practical/Theory</th>
+        </tr>
+        <tr>
+            <th>Internal</th>
+            <th>External</th>
+            <th>Internal</th>
+            <th>External</th>
+        </tr>
+        <tr>
+            <td rowspan="4">1</td>
+            <td rowspan=4>MBA</td>
+            <td>Management Accounting</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>Theory</td>
+        </tr>
+        <tr>
+            <td>Information Technology</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>T and P</td>
+        </tr>
+        <tr>
+            <td>Basics of Marketing</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>Theory</td>
+        </tr>
+        <tr>
+            <td>E-Commerce</td>
+            <td>50</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>-</td>
+            <td>Theory</td>
+        </tr>
+        <tr>
+            <td rowspan=6>2</td>
+            <td rowspan=6>MCM</td>
+            <td>Visual Basics</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>T and P</td>
+        </tr>
+        <tr>
+            <td>Internet Technology</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>T and P</td>
+        </tr>
+        <tr>
+            <td>Network Technology</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>Theory</td>
+        </tr>
+        <tr>
+            <td>VB.Net</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>T and P</td>
+        </tr>
+        <tr>
+            <td>Linux</td>
+            <td>30</td>
+            <td>70</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>T and P</td>
+        </tr>
+        <tr>
+            <td>ISA</td>
+            <td>50</td>
+            <td>-</td>
+            <td>&#10004</td>
+            <td>-</td>
+            <td>Theory</td>
+        </tr>
+    </table>
 </body>
 
 </html>
