--- a/1_css.html
+++ b/1_css.html
@@ -25,6 +25,9 @@
     </head>
 
     <body>
-        <a href="https://www.amazon.in/?tag=siteplug89719-21" target="_blank">Amazon</a>
+        <h2 align="center" color="green">Click on the link to visit Amazon</h2>
+        <div style="display:flex; justify-content:center">
+            <a href="https://www.amazon.in/?tag=siteplug89719-21" target="_blank">Amazon</a>
+        </div>
     </body>
 </html>
