--- a/9.html
+++ b/9.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Customer Profile</h1>
-        <div style="border:2px solid black; padding:10px; margin:5px;width:100%;"
+        <div style="border:2px solid black; padding:10px; margin:5px;width:100%;">
         <form>
             Name: <input type="text" name="Name" id="Name" maxlength="10" placeholder="Enter your name"><br><br>
             Address: <input type="'text" name="address" id="address" size="50"><br><br>
@@ -31,7 +31,7 @@
                     <input type="radio" name="payment" value="Coupons">Coupons
                 </label><br><br><br>
             <button type="submit">Submit</button>
-        </form>
+        </form></div>
     </body>
 
 </html>
